--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "pm2 start lib/server.js --watch",
-    "webpack": "webpack -wd"
+    "webpack": "webpack -wd",
+    "test": "jest --watch"
   },
   "babel": {
     "presets": [
@@ -20,6 +21,7 @@
     "babel-eslint": "^8.2.6",
     "eslint": "^5.4.0",
     "eslint-plugin-react": "^7.11.1",
+    "jest": "^23.5.0",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
