--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Amit Kumar",
   "license": "MIT",
   "scripts": {
-    "dev": "pm2 start lib/server.js --watch --interpreter babel-node",
+    "dev": "pm2 start lib/server.js",
     "server": "cross-env NODE_PATH=./lib babel-node lib/server.js",
     "webpack": "webpack -wd",
     "test": "jest --watch"
@@ -36,7 +36,10 @@
     "cross-env": "^5.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "global": "^4.3.2",
+    "jshint": "^2.9.6",
     "pm2": "^3.0.4",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-test-renderer": "^16.4.2",
