--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "enzyme": "^3.5.0",
     "eslint": "^5.4.0",
     "eslint-plugin-react": "^7.11.1",
     "jest": "^23.5.0",
@@ -35,6 +36,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.2.0",
     "ejs": "^2.6.1",
+    "enzyme-adapter-react-16": "^1.3.1",
     "express": "^4.16.3",
     "global": "^4.3.2",
     "jshint": "^2.9.6",
