--- a/package.json
+++ b/package.json
@@ -6,16 +6,26 @@
   "author": "Amit Kumar",
   "license": "MIT",
   "scripts": {
-    "dev": "pm2 start lib/server.js",
-    "server": "cross-env NODE_PATH=./lib babel-node lib/server.js",
+    "dev": "cross-env NODE_PATH=./lib pm2 start lib/server.js --watch --interpreter",
+    "server": "cross-env NODE_PATH=./lib nodemon  ./node_modules/babel-cli/bin/babel-node.js lib/server.js",
     "webpack": "webpack -wd",
     "test": "jest --watch"
   },
   "babel": {
     "presets": [
       "react",
-      "env",
-      "stage-2"
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ],
+    "plugins": [
+      "transform-class-properties",
+      "transform-object-rest-spread"
     ]
   },
   "devDependencies": {
@@ -40,6 +50,8 @@
     "express": "^4.16.3",
     "global": "^4.3.2",
     "jshint": "^2.9.6",
+    "lodash.debounce": "^4.0.8",
+    "nodemon": "^1.18.4",
     "pm2": "^3.0.4",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
